GNOME Bugzilla – Bug 655724
egl-gdl: Don't generate cogl-display.h
Last modified: 2011-08-01 15:41:28 UTC
It's not necessary to generate cogl-display.h just for the GDL backend and to change the inclusion of libgdl.h. We can just tweak the include CFLAGS to put /usr/include/CE4100 in the search path when needed. Previously this did not work because of a stay ',' at the end of the COGL_EXTRA_CFLAGS int he configure.ac. This actually simplifies the code, which is always good. This also fixes out of tree builds.
Created attachment 192986 [details] [review] egl-gdl: Don't generate cogl-display.h
Pushed as ee01fd263a94a36467bc320f8436681b48945439. Thanks.